--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -56,6 +56,12 @@
             </div>
             <button>Search</button>
         </section>
+        <section class="places">
+            <h1>Places</h1>
+            <article><h2>My Home</h2></article>
+            <article><h2>Tiny house</h2></article>
+            <article><h2>A suite</h2></article>
+        </section>
     </div>
     <footer>
         <p>
