--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,25 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
-    <link rel="stylesheet" href="./styles/3-common.css">
-    <link rel="stylesheet" href="./styles/3-header.css">
-    <link rel="stylesheet" href="./styles/3-footer.css">
-    <link rel="shortcut icon" type="image/png" href="./images/icon.png"/>
-</head>
-<body>
-    <header>
-        <div class="logo">
+  <head>
+    <meta charset="utf-8">
+    <title>AirBnB clone</title>
+    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/3-common.css">
+    <link rel="stylesheet" href="styles/3-header.css">
+    <link rel="stylesheet" href="styles/3-footer.css">
+    <link rel="icon" href="images/icon.png">
+  </head>
 
-        </div>
-    </header>
+  <body>
+    <header></header>
     <footer>
-        <p>
-            Best School
-        </p>
+      Best School
     </footer>
-</body>
+  </body>
 </html>
